IF (MAGICKCORE_QUANTUM_DEPTH)
    add_definitions( -DMAGICKCORE_QUANTUM_DEPTH=${MAGICKCORE_QUANTUM_DEPTH} )
ELSE (MAGICKCORE_QUANTUM_DEPTH)
    add_definitions( -DMAGICKCORE_QUANTUM_DEPTH=16 )
ENDIF (MAGICKCORE_QUANTUM_DEPTH)
IF (MAGICKCORE_HDRI_ENABLE)
    add_definitions( -DMAGICKCORE_HDRI_ENABLE=${MAGICKCORE_HDRI_ENABLE} )
ELSE (MAGICKCORE_HDRI_ENABLE)
    add_definitions( -DMAGICKCORE_HDRI_ENABLE=0 )
ENDIF (MAGICKCORE_HDRI_ENABLE)
# Find the ImageMagick++ library
FIND_PACKAGE(ImageMagick COMPONENTS Magick++)
IF (ImageMagick_FOUND)
    # Include ImageMagick++ headers (needed for compile)
    add_plugin(Tools "Tools.cpp")
    target_include_directories(Tools PRIVATE ${ImageMagick_INCLUDE_DIRS})
    target_link_libraries(Tools "stdc++fs" ${ImageMagick_LIBRARIES})
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unused-parameter")
ENDIF (ImageMagick_FOUND)
